Added new div and function for a bar chart

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
   <h1>Using a charting library</h1>
 	<!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
+	<div id="semester"></div>
 	
-		<div id="allocations"></div>
+  <div id="chart_div"></div>
+	
+	<div id="allocations"></div>
+	
 
 </body>
 </html>
