added buttons and window onload function

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 <body>
   <h1>Using a charting library</h1>
+	
+	<button id="semester-trigger">Show "semesters"</button>
+	<button id="pizza-trigger">Show "pizza"</button>
+	<button id="allocations-trigger">Show "donation allocations"</button>
+	
 	<!--Div that will hold the pie chart-->
-	<div id="semester"></div>
+	<div id="semesters"></div>
 	
   <div id="chart_div"></div>
 	
